<resources>
    <string name="app_name">SkrittCompanion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="world_boss_timer">World Boss Timer</string>
    <string name="tools">Tools</string>
    <string name="amp_be4daaa"><![CDATA[[&BE4DAAA=]]]></string>
    <string name="shatterer">Shatterer</string>
    <string name="item_search">Item Search</string>
    <string name="wallet">Wallet</string>
    <string name="account">Account</string>
    <string name="register">Register</string>
    <string name="email">EMAIL:</string>
    <string name="anon">Anonymous</string>
    <string name="dailies">Dailies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trading_post_sell">Trading Post Sell</string>
    <string name="trading_post_buy">Trading Post Buy</string>
    <string name="overview">Overview</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="status">STATUS</string>
    <string name="update_key">UPDATE KEY</string>
</resources>
